1、如果外置SD卡不存在，则保存到内存 2、路测信息保存完毕后不在显示保存路径 3、保存完成的提示修改为中文

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="external_disabled">外置SD卡不可用</string>
     <string name="looptest_data_dir">基站路测</string>
     <string name="collect_data_dir">基站采集</string>
+    <string name="file_saved">文件保存完成!</string>
 </resources>
