--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -89,4 +89,7 @@
     
     <string name="remove_promt">确定要把此基站从锁定列表清除吗？</string>
     <string name="ok">确定</string>
+    <string name="query_save">是否保存数据</string>
+    <string name="yes">是</string>
+    <string name="no">否</string>
 </resources>
